fixed settings content section jumping when page loading

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -415,6 +415,7 @@ $grid_sm: 600px !default;
  */
 .portfolio_page_visual-portfolio-settings {
     $settings_nav_width: 220px !default;
+    $settings_content_height: 340px !default;
 
     // Navigation.
     @media (min-width: 782px) {
@@ -449,11 +450,13 @@ $grid_sm: 600px !default;
         .metabox-holder {
             float: left;
             width: calc(100% - #{$settings_nav_width + 2});
+            // Compensate 10px padding + 2px border.
+            min-height: $settings_content_height + 22px;
             margin-top: 9px;
 
             > div,
             > div > form {
-                min-height: 340px;
+                min-height: $settings_content_height;
             }
         }
     }
